--- a/index.html
+++ b/index.html
@@ -1,51 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        table, th, td {
-          border:1px solid black;
-        }
-        </style>
-    <title>resume</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    table,
+    th,
+    td {
+      border: 1px solid black;
+    }
+  </style>
+  <link>
+  <title>resume</title>
 </head>
+
 <body>
-    <h2><center>Deeksha Verma</center> </h2>
-    <center><p>Currently I am intern at ZopSmart and pursuing master og computer application from nit jamshedpur</p></center>
-    <table >
-        <tr>
-          <th>Institute Name</th>
-          <th><Year of passing</th>
-          <th>Percentage/CGPA</th>
-        </tr>
-        <tr>
-          <td>NIT Jmashedpur</td>
-          <td>2022</td>
-          <td>8.4 cgpa</td>
-        </tr>
-        <tr>
-          <td>Holkar science college Indore</td>
-          <td>2019</td>
-          <td>6.5 cgpa</td>
-        </tr>
-        <tr>
-            <td>MP Board</td>
-            <td>2016</td>
-            <td>87 %<td>
-          </tr>
-          <tr>
-            <td>MP Board</td>
-            <td>2014</td>
-            <td>67 %</td>
-          </tr>
-      </table>
-      <h3>Position and Responsbility</h3>
-       <ul><li>Joint core member of culfest 2020</li></ul>
-      <h3>Hobbies</h3>
-      <ul><li>Playing Games </li>
+  <h2>
+    <center>Deeksha Verma</center>
+  </h2>
+  <center>
+    <p>Currently I am intern at ZopSmart and pursuing master og computer application from nit jamshedpur</p>
+  </center>
+
+  <h3 style="width: 100px;">Education</h3>
+  <hr>
+  <table>
+    <tr>
+      <th>Institute Name</th>
+      <th>Year of passing</th>
+      <th>Percentage/CGPA</th>
+    </tr>
+    <tr>
+      <td>NIT Jmashedpur</td>
+      <td>2022</td>
+      <td>8.4 cgpa</td>
+    </tr>
+    <tr>
+      <td>Holkar science college Indore</td>
+      <td>2019</td>
+      <td>6.5 cgpa</td>
+    </tr>
+    <tr>
+      <td>MP Board</td>
+      <td>2016</td>
+      <td>87 %</td>
+    </tr>
+    <tr>
+      <td>MP Board</td>
+      <td>2014</td>
+      <td>67 %</td>
+    </tr>
+  </table>
+  <div>
+    <h3>Skills</h3>
+    <hr>
+    <ul>
+      <li> <strong>Programming languages :</strong>C,C++,Python(Basics),JavaScript</li>
+      <li><strong>Web Development :</strong>HTML,CSS</li>
+      <li><strong>Frame work</strong>Bootstrap</li>
+       <li>Data structure,DBMS,SQL,Operating system</li>
+    </ul>
+      
+  </div>
+  
+  
+  <h3 class="subhead">Position and Responsbility : </h3>
+  <hr>
+  <ul>
+    <li>Joint core member of culfest 2020</li>
+  </ul>
+  <h3>Hobbies :</h3>
+  <ul>
+    <li>Playing Games </li>
     <li>Listening music</li>
-<li>Dancing</li></ul>
+    <li>Dancing</li>
+  </ul>
+
+  <h3>Personal Information :</h3>
+  <hr>
+  <ul>
+    <b>Address:</b> pg 4th sector Bangalore
+  </ul>
+  <ul> <b>Contact number:</b>8319966155</ul>
+  <ul> <b>gmail:</b>deeksha.gverma112gmail.com</ul>
 </body>
+
 </html>
